@@ -325,11 +325,10 @@ public class Resident extends TownyObject implements InviteReceiver, EconomyHand
 		Towny.getPlugin().deleteCache(this.getName());
 		setTitle("");
 		setSurname("");
-		updatePerms();
-		
 
 		if (town == null) {
 			this.town = null;
+			updatePerms();
 			return;
 		}
 
@@ -337,6 +336,7 @@ public class Resident extends TownyObject implements InviteReceiver, EconomyHand
 			throw new AlreadyRegisteredException();
 
 		this.town = town;
+		updatePerms();
 		town.addResident(this);
 		BukkitTools.getPluginManager().callEvent(new TownAddResidentEvent(this, town));
 	}
